# dip_coater

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
docs/: TMC2660_EVALParameters.md
src/MyRPi/: _GPIO.py
src/MyRPi/GPIO/: __init__.py
src/MyTMC_2209/: TMC_2209_StepperDriver.py  _TMC_2209_comm.py  _TMC_2209_logger.py  _TMC_2209_move.py  _TMC_2209_test.py
src/dip_coater/: app.py  app_state.py  code_editor_init_content.py  coder_API.md  constants.py  gpio.py  help.md  motor.py  tui.py  tui.tcss
src/dip_coater/commands/: help_command.py
src/dip_coater/config/: config_base.py  config_loader.py  config_tmc2209.py  config_tmc2660.py
src/dip_coater/logging/: motor_logger.py  tmc2660_logger.py
src/dip_coater/mechanical/: mechanical_setup.py  setup_large_coater.py  setup_small_coater.py
src/dip_coater/motor/: mechanical_setup.py  motor_driver_interface.py  tmc2209.py  tmc2660.py  tmc2660_playground.py  tmc2660_playground_old.py
src/dip_coater/screens/: help_screen.py
src/dip_coater/utils/: SettingChanged.py  helpers.py  threading_util.py
src/dip_coater/widgets/: advanced_settings.py  coder.py  distance_controls.py  motor_controls.py  position_controls.py  speed_controls.py  status.py  status_advanced.py  step_mode.py
src/dip_coater/widgets/advanced/: advanced_settings_base.py  advanced_settings_tmc2209.py  advanced_settings_tmc2660.py  status_advanced_base.py  status_advanced_tmc2209.py  status_advanced_tmc2660.py
src/dip_coater/widgets/tabs/: advanced_settings_tab.py  coder_tab.py  logs_tab.py  main_tab.py
src/test/: test_gpiozero.py
