[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dip-coater"
version = "0.7.0"
authors = [
    {name="Rik Huygen", email="rik.huygen@kuleuven.be"}
]
license = { text = "MIT License" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8, <4.0"

dependencies = [
    "textual",
    "textual-dev",
    "rpimotorlib"
]

[project.urls]
repository = "https://github.com/IvS-KULeuven/dip_coater"

[project.optional-dependencies]
rpi = ["RPi.GPIO"]

[project.scripts]
dip-coater = "dip_coater.tui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dip_coater = [
    "*.tcss",
    "*.md",
    "images/*.png"
]
